| Bug #21676 | select * from information_schema.files crashes server | ||
|---|---|---|---|
| Submitted: | 16 Aug 2006 18:27 | Modified: | 13 Sep 2006 17:38 | 
| Reporter: | Markus Popp | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) | 
| Version: | 5.1.12bk | OS: | Linux (SuSE Linux 10.1 (AMD64)) | 
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any | 
   [16 Aug 2006 18:27]
   Markus Popp        
  
 
   [16 Aug 2006 18:39]
   MySQL Verification Team        
  Thank you for the bug report. Also happens on Suse 32-bits. Welcome to the MySQL monitor. Commands end with ; or \g. Your MySQL connection id is 2 to server version: 5.1.12-beta-debug Type 'help;' or '\h' for help. Type '\c' to clear the buffer. mysql> select * from information_schema.files; ERROR 2013 (HY000): Lost connection to MySQL server during query mysql>
   [24 Aug 2006 8:41]
   Bugs System        
  A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10814 ChangeSet@1.2282, 2006-08-24 13:58:03+05:00, gluh@mysql.com +1 -0 bug#21676 select * from information_schema.files crashes server skip engine handling if engine is disabled
   [30 Aug 2006 8:25]
   Bugs System        
  A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/11057 ChangeSet@1.2285, 2006-08-30 13:42:31+05:00, gluh@mysql.com +1 -0 bug#21676 select * from information_schema.files crashes server skip engine handling if engine is disabled
   [13 Sep 2006 6:49]
   Sergei Glukhov        
  fixed in 5.1.12-beta
   [13 Sep 2006 17:38]
   Paul DuBois        
  Noted in 5.1.12 changelog.
