bug#21676 select * from information_schema.files crashes server skip engine handling if engine is disabled