sql/sql_show.cc
@@ -5149,7 +5149,7 @@ static my_bool run_hton_fill_schema_files(THD *thd, st_plugin_int *plugin,
   struct run_hton_fill_schema_files_args *args=
     (run_hton_fill_schema_files_args *) arg;
   handlerton *hton= (handlerton *)plugin->data;
-  if(hton->fill_files_table)
+  if(hton->fill_files_table && hton->state == SHOW_OPTION_YES)
     hton->fill_files_table(thd, args->tables, args->cond);
   return false;
 }
